<resources>
    <string name="app_name">TFGSportPro</string>

    <string name="prefs_file">com.alejandro.TFGSportPro.REFERENCE_FILE_KEY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Traducciones de la página inicio sesion (activity-main)-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="b_login">Login</string>
    <string name="b_register">Register</string>
    <string name="infoForgotPassword">Forgot Password?</string>
    <string name="b_forgotPassword">Click here.</string>
    <string name="b_facebook">Not implemented yet</string>

    <!--Traducciones de la página registro (activity-register)-->
    <string name="confirmPassword">Confirm Password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="infoPhysicalLevel">Select your physical activity (week):</string>
    <string name="low">Low (&lt;3 Hours)</string>
    <string name="medium">Medium (3–6 Hours)</string>
    <string name="high">High (&gt;6 Hours)</string>
    <string name="verification_Completed">Verification Completed</string>
    <string name="verification_Email">Your email has been verified. You can now log in.</string>
    <string name="verification_Required">Verification required</string>
    <string name="email_Sent">We have sent a verification email. Please check your inbox and confirm your email before logging in.</string>
    <string name="error_title">Error</string>
    <string name="accept">Accept</string>
    <string name="registering_user">Registering user...</string>

    <!--Errores-->
    <string name="Error_invalid_Email">Invalid email</string>
    <string name="Error_at_Least_6_Characters">Password must be at least 6 characters long.</string>
    <string name="Error_passwords_Dont_Match">Passwords do not match.</string>
    <string name="Error_name_cannot_be_empty">Name cannot be empty.</string>
    <string name="Error_age_cannot_be_empty">Age cannot be empty.</string>
    <string name="Error_creating_user">Error creating user.</string>
    <string name="Error_email_not_with_password_provider">Email not registered with password provider.</string>
    <string name="Error_verifying_email">Error verifying email.</string>

    <!--Traducciones de la página Forgot Password-->
    <string name="b_recover">Recover</string>
    <string name="introduceEmail">Email address</string>
    <string name="emailSent">An email has been sent to reset your password.</string>
    <string name="emailCouldNotSent">The email could not be sent. Please check if the email is correct.</string>
    <string name="emailNotRegistered">The email is not registered.</string>
    <string name="reset_Password">Reset Password</string>
    <string name="info_resetPassword">Enter your email address and we´ll send you a link to reset your password</string>

    <!--Traducciones del menú overflow-->
    <string name="b_profile">Profile</string>
    <string name="b_logOut">Log Out</string>
    <string name="switchTheme">Dark Mode</string>

    <!--Traducciones de la página training (fragment-training)-->
    <string name="day">Day %1$d</string>

    <!--Traducciones del menu de navegacion (activity-home)-->
    <string name="Training">Training</string>
    <string name="Resume">Resume</string>
    <string name="Me">Me</string>

    <!--Traducciones del menu de niveles de dificultad-->
    <string name="Low">Low Level</string>
    <string name="Medium">Medium Level</string>
    <string name="High">High Level</string>

    <!--Traducciones de la página me (fragment-me)-->
    <string name="b_logout">LogOut</string>
    <string name="infoEmail">Email : </string>
    <string name="infoName">Name : </string>
    <string name="infoAge">Age : </string>
    <string name="infoPhysicalActivity">Physical Activity : </string>
    <string name="infoProfile">Profile</string>
    <string name="infoNotauthenticated">Not authenticated</string>
    <string name="darkMode">Dark Mode</string>
    <string name="consecutive_daysStreak">Consecutive days streak: %1$d</string>
    <string name="age_not_available">Age not available</string>
    <string name="physical_activity_not_available">Physical activity not available</string>
    <string name="not_found">Not found</string>

    <!--Cargandos pagina Me-->
    <string name="loadingEmail">Loading Email… </string>
    <string name="loadingName">Loading Name… </string>
    <string name="loadingAge">Loading Age…</string>
    <string name="loadingPhysicalActivity">Loading Physical Activity…</string>

    <!--Traducciones de la página Resume (fragment-resume)-->
    <string name="completed">Completed</string>
    <string name="graphic">Graphic</string>

    <!--Token Google para el login-->
    <string name="web_client">147450873098-gr8v9abfq0asor3emim7t8v608i1utd6.apps.googleusercontent.com</string>

    <string name="errorloginmessage">Invalid login credentials</string>
    <string name="errorloginGooglemessage">Google login failed.</string>

    <!--Traducciones RoutineSummary-->
    <string name="b_start">Start</string>
    <string name="routine_details">Level: %1$s\nTotal time: %2$d min %3$d sec</string>
    <string name="totalExercises">Total Exercises: %1$d</string>
    <string name="warmUpExercises">Warm-Up</string>
    <string name="mainExercises">Main Exercises</string>
    <string name="routineResume">Routine Resume</string>

    <!--Traducciones de los ejercicios RoutineExercise-->
    <string name="b_previous">Back</string>
    <string name="b_next">Next</string>
    <string name="b_pause">Pause</string>
    <string name="b_resume">Resume</string>
    <string name="routine_Completed">Routine Completed!!</string>
    <!--Descanso-->
    <string name="BREAK">BREAK</string>
    <!--Calentamientos-->
    <string name="high_Knees">High Knees (Warm-up)</string>
    <string name="jumping_Jacks">Jumping Jacks (Warm-up)</string>
    <string name="jumping_Squats">Jumping Squats (Warm-up)</string>
    <string name="low_Skipping">Low Skipping (Warm-up)</string>
    <string name="jumping_In_Place">Jumping in Place (Warm-up)</string>
    <string name="intense_Jumping_Jacks">Intense Jumping Jacks (Warm-up)</string>
    <string name="high_Skipping">High Skipping (Warm-up)</string>
    <string name="plyo_Jacks">Plyo Jacks (Warm-up)</string>
    <string name="boxing">Boxing (Warm-up)</string>
    <string name="bear_Crawl">Bear Crawl (Warm-up)</string>
    <string name="push_Ups_Toe_Touch">Push-Ups with toe-touch (Warm-up)</string>
    <string name="vertical_Mountain_Climbers">Vertical Mountain Climbers (Warm-up)</string>

    <!--Ejercicios-->
    <string name="lunges">Lunges</string>
    <string name="lateral_Lunges">Lateral Lunges</string>
    <string name="jumping_Lunges">Jumping Lunges</string>
    <string name="crossover_Lunges">Crossover Lunges</string>
    <string name="reverse_Lunges">Reverse lunges</string>

    <string name="heel_Raises">Heel Raises</string>
    <string name="lateral_Leg_Raise">Lateral Leg Raise</string>
    <string name="heel_Raises_On_Step">Heel Raises on a Step</string>
    <string name="cat_Leg_Raises">Cat Leg Raises</string>
    <string name="l_Leg_Raises">L Leg Raises</string>

    <string name="push_Ups">Push-Ups</string>
    <string name="knee_Push_Ups">Knee Push-Ups</string>
    <string name="controlled_Pushups_Slow">Controlled Push-ups (Slow)</string>
    <string name="clap_Push_Ups">Clap Push-Ups</string>
    <string name="cross_body_Push_Ups">Cross-body Push-Ups</string>
    <string name="archer_Push_Ups">Archer Push Ups</string>

    <string name="plank">Plank</string>
    <string name="elbow_Plank">Elbow Plank</string>
    <string name="side_Plank">Side Plank</string>
    <string name="plank_With_Shoulder_Tap">Plank with Shoulder Tap</string>
    <string name="single_Leg_Plank">Single Leg Plank</string>
    <string name="reverse_Plank">Reverse Plank</string>
    <string name="plank_Leg_Raises">Plank Leg Raises</string>
    <string name="plank_One_Arm_Leg">Plank One Arm-Leg</string>

    <string name="crunches">Crunches</string>
    <string name="bicycle_Crunches">Bicycle Crunches</string>
    <string name="short_Crunches">Short crunches</string>
    <string name="cross_Body_crunches">Cross-body Crunches</string>
    <string name="heel_Tap_Crunches">Heel Tap Crunches</string>
    <string name="v_Crunches">V Crunches</string>
    <string name="crunches_90_Degrees">90° Leg Crunches</string>

    <string name="glute_Bridge">Glute Bridge</string>
    <string name="single_Leg_Glute_Bridge">Single-leg Glute Bridge</string>

    <string name="squats">Squats</string>
    <string name="lateral_Squat">Lateral Squat</string>
    <string name="jump_squats">Jump squats</string>
    <string name="bulgarian_split_squat">Bulgarian split squat</string>
    <string name="skater_squat">Skater squat</string>
    <string name="sumo_squat">Sumo squat</string>
    <string name="shrimp_Squat">Shrimp Squat</string>
    <string name="single_leg_squat">Single-leg squat</string>
    <string name="explosive_jump_squat">Explosive jump squat</string>
    <string name="intense_Jumping_Squats">Intense Jumping Squats</string>
    <string name="split_Squat">Split Squat</string>
    <string name="hawaiian_Squat">Hawaiian Squat</string>

    <string name="russian_Twists">Russian Twists</string>
    <string name="weighted_Russian_Twists">Weighted Russian Twists</string>

    <string name="burpees">Burpees</string>
    <string name="navy_Seal_Burpee">Navy Seal Burpee</string>

    <string name="climbers">Climbers</string>
    <string name="dead_Bug">Dead Bug</string>
    <string name="sprint_In_Place">Sprint in Place</string>
    <string name="lateral_Jumps">Lateral Jumps</string>
    <string name="lying_Leg_Extension">Lying Leg Extension</string>
    <string name="superman">Superman</string>
    <string name="step_Ups">Step-Ups</string>
    <string name="stair_Climbing">Stair Climbing</string>
    <string name="knee_Raises_Plank">Knee Raises Plank</string>
    <string name="waist_Rotation">Waist Rotation</string>

    <!--Pagina RoutineSummary-->
    <string name="routines_completed">Routines Completed: </string>
    <!--%1$d El argumento ha de ser un entero decimal; %2$s El argumento ha de ser un string.-->
    <string name="day_level">Day %1$d \nLevel %2$s</string>
    <string name="date">\nDate: %1$s</string>
    <string name="Lows">Low</string>
    <string name="Mediums">Medium</string>
    <string name="Highs">High</string>
    <string name="everything">Everything</string>

    <!--Pagina Graphic-->
    <string name="days">Days</string>
    <string name="routines_Finished">Routines Completed</string>

</resources>